--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ GENERATE_SOURCEMAP=false
 PORT=3030
 
 # HOST
-REACT_APP_HOST_API_KEY=https://minimal-assets-api-dev.vercel.app
+#REACT_APP_HOST_API_KEY=https://minimal-assets-api-dev.vercel.app
+REACT_APP_HOST_API_KEY=http://localhost:3000
 
 # MAP
 REACT_APP_MAPBOX_API=
