--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "rehype-raw": "^6.1.1",
+    "rxjs": "^7.5.6",
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
     "slick-carousel": "^1.8.1",
@@ -126,7 +127,6 @@
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.0",
